--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,47 @@
-.stack-work/
+# this project's specific
 *~
 *.lock
+
+# Stack build artifacts
+.stack-work/
+.stack-work-install/
+
+# Cabal build artifacts
+dist/
+dist-newstyle/
+cabal.sandbox.config
+cabal.project.local
+.cabal-sandbox/
+
+# GHC artifacts
+*.hi
+*.o
+*.dyn_o
+*.dyn_hi
+
+# HIE files (Haskell IDE Engine)
+.hie/
+
+# IDE and editor files
+*.swp
+*~
+.hsenv
+*.cabal-sandbox/
+*.cabal-sandbox/*
+*.cabal-sandbox/**/*
+cabal.sandbox.config
+
+# Testing
+.htf/
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+*.log
