--- a/hascii-player/package.yaml
+++ b/hascii-player/package.yaml
@@ -22,6 +22,8 @@ description: Please see the README on GitHub at <https://github.com/githubuser/h
 dependencies:
     - base >= 4.7 && < 5
     - brick
+    - JuicyPixels
+    - process
 
 ghc-options:
     - -Wall
