--- a/stack.yaml
+++ b/stack.yaml
@@ -8,17 +8,17 @@
 # A snapshot resolver dictates the compiler version and the set of packages
 # to be used for project dependencies. For example:
 #
-# resolver: lts-3.5
-# resolver: nightly-2015-09-21
-# resolver: ghc-7.10.2
+# resolver: lts-21.13
+# resolver: nightly-2023-09-24
+# resolver: ghc-9.6.2
 #
 # The location of a snapshot can be provided as a file or url. Stack assumes
 # a snapshot provided as a file might change, whereas a url resource does not.
 #
 # resolver: ./custom-snapshot.yaml
-# resolver: https://example.com/snapshots/2018-01-01.yaml
+# resolver: https://example.com/snapshots/2023-01-01.yaml
 resolver:
-    url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/21/20.yaml
+    url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/21/24.yaml
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -30,7 +30,7 @@ resolver:
 #   - auto-update
 #   - wai
 packages:
-    - .
+    - hascii-player
 # Dependency packages to be pulled from upstream that are not in the resolver.
 # These entries can reference officially published versions as well as
 # forks / in-progress versions pinned to a git hash. For example:
@@ -53,7 +53,7 @@ packages:
 #
 # Require a specific version of Stack, using version ranges
 # require-stack-version: -any # Default
-# require-stack-version: ">=2.9"
+# require-stack-version: ">=2.13"
 #
 # Override the architecture used by Stack, especially useful on Windows
 # arch: i386
@@ -65,6 +65,4 @@ packages:
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
-extra-deps:
-    - brick-0.47
-allow-newer: true
+# allow-newer: true
