--- a/stack.yaml
+++ b/stack.yaml
@@ -66,3 +66,5 @@ packages:
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
 # allow-newer: true
+extra-deps:
+    - brick-0.47
